--- a/Test_Page.html
+++ b/Test_Page.html
@@ -9,7 +9,7 @@
 
 <body background-color="Yellow">
 
-<h1 style=" text-align:center" align:center><b>My First Heading</b></h1>
+<h1 style=" text-align:center" align:center><b>My First Heading with Changes</b></h1>
 <h2 style="color:#041E42;">h2 Tag</h2>
 <h3>h3 Tag</h3>
 <h4>h4 Tag</h4>
@@ -20,6 +20,9 @@
 	<p style="text-align:center">Say Hello</p>
 	<p>Say Hello 2</p>
 	<p style="text-align:center">Say Hello 3</p>
+	
+	<p style="text-align:center">Say Hello 4</p>
+	<p style="text-align:center">Say Hello ONE MORE TIME</p>
 </p>
 
 </body>
